# Voices-of-Ages

./: .env.example  Dockerfile  README.md  dev_start.py  docker-compose-prod.yml  docker-compose.yml  pyproject.toml
src/: __main__.py  commands.py  settings.py
src/api/: api.py
src/db/: fake_database.py  models.json
src/dialogs/: __init__.py  dialogs.py  main_router.py  states.py
src/dialogs/windows/menu/: menu.py  methods.py
src/dialogs/windows/process/: methods.py  process.py
