[tool.poetry]
name = "voices-of-ages"
version = "0.1.0"
description = ""
authors = ["Artem <artem00561@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram-dialog = "2.1.0"
coloredlogs = "15.0.1"
redis = "5.0.4"
pydantic-settings = "2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
